src/objects/PagesApi__Theme__c.object
<CustomObject>
    <description>Themes store configurations for page style and branding.</description>
    <fields>
        <fullName>PagesApi__Body_Background_Color__c</fullName>
        <description>Valid hexadecimal, rgb, or rgba notation required.</description>
        <inlineHelpText>Valid hexadecimal, rgb, or rgba notation required.</inlineHelpText>
        <label>Body Background</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Brand_Primary__c</fullName>
        <description>Valid hexadecimal, rgb, or rgba notation required.</description>
        <inlineHelpText>Valid hexadecimal, rgb, or rgba notation required.</inlineHelpText>
        <label>Brand Primary</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Brand_Secondary__c</fullName>
        <description>Valid hexadecimal, rgb, or rgba notation required.</description>
        <inlineHelpText>Valid hexadecimal, rgb, or rgba notation required.</inlineHelpText>
        <label>Brand Secondary</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Community_Styles__c</fullName>
        <description>Generated Styles for Community.</description>
        <inlineHelpText>Generated Styles for Community.</inlineHelpText>
        <label>SYSTEM</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Custom_CSS__c</fullName>
        <description>Custom CSS is inserted before the closing html head (&quot;&lt;/head&gt;&quot;) tag into pages using this Theme.</description>
        <inlineHelpText>Custom CSS is inserted before the closing html head (&quot;&lt;/head&gt;&quot;) tag into pages using this Theme.</inlineHelpText>
        <label>Custom CSS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Custom_Print_Stylesheet_URL__c</fullName>
        <description>Secure (&quot;https://&quot;) url to the location of a custom stylesheet to use for rendering pages for print media.</description>
        <inlineHelpText>Secure (&quot;https://&quot;) url to the location of a custom stylesheet to use for rendering pages for print media.</inlineHelpText>
        <label>Custom Print Stylesheet URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Custom_Stylesheet_URL__c</fullName>
        <description>The secure (&quot;https://&quot;) url where the stylesheet is hosted.</description>
        <inlineHelpText>The secure (&quot;https://&quot;) url where the stylesheet is hosted.</inlineHelpText>
        <label>Custom Stylesheet URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Description__c</fullName>
        <description>Optional description for the Theme.</description>
        <inlineHelpText>Optional description for the Theme.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Favicon_Image__c</fullName>
        <description>The image to use for a favicon used for visual site identification in various browser interfaces (bookmarks,tabs,etc...).</description>
        <inlineHelpText>The image to use for a favicon used for visual site identification in various browser interfaces (bookmarks,tabs,etc...).</inlineHelpText>
        <label>Favicon Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Footer__c</fullName>
        <description>Custom HTML to display in the footer of all pages that use the theme.</description>
        <inlineHelpText>Custom HTML to display in the footer of all pages that use the theme.</inlineHelpText>
        <label>Footer</label>
        <length>55000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__HTML_Head__c</fullName>
        <description>Insert custom scripts and styles before the closing &lt;/head&gt; tag into pages that use this Theme.</description>
        <inlineHelpText>Insert custom scripts and styles before the closing &lt;/head&gt; tag into pages that use this Theme.</inlineHelpText>
        <label>HTML Head</label>
        <length>55000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Header__c</fullName>
        <description>Custom HTML to display in the header of all pages that use the theme.</description>
        <inlineHelpText>Custom HTML to display in the header of all pages that use the theme.</inlineHelpText>
        <label>Header</label>
        <length>55000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Lightning_Community_Styles__c</fullName>
        <description>Generated Styles for Lightning Community.</description>
        <inlineHelpText>Generated Styles for Lightning Community.</inlineHelpText>
        <label>SYSTEM</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Link_Color__c</fullName>
        <description>Valid hexadecimal, rgb, or rgba notation required.</description>
        <inlineHelpText>Valid hexadecimal, rgb, or rgba notation required.</inlineHelpText>
        <label>Link</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Logo_Image__c</fullName>
        <description>The secure (&quot;https://&quot;) url where the logo image file is located. We recommend uploading a logo that is of equal height and width and less than 20kb with a 72dpi resolution. The minimum height and width is 150px the maximum is 1000px.</description>
        <inlineHelpText>The secure (&quot;https://&quot;) url where the logo image file is located. We recommend uploading a logo that is of equal height and width and less than 20kb with a 72dpi resolution. The minimum height and width is 150px the maximum is 1000px.</inlineHelpText>
        <label>Logo Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Logo_Text__c</fullName>
        <description>If a logo image is not defined for the Theme the logo text will be used by default. Applies only for themes using &quot;Fonteva Drive&quot; as a stylesheet template.</description>
        <inlineHelpText>If a logo image is not defined for the Theme the logo text will be used by default. Applies only for themes using &quot;Fonteva Drive&quot; as a stylesheet template.</inlineHelpText>
        <label>Logo Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Logo_URL__c</fullName>
        <description>The url of the web page to direct users when they click the logo text or logo image on any web page using this Theme. Valid only for Themes using &quot;Fonteva Drive&quot; as a stylesheet template.</description>
        <inlineHelpText>The url of the web page to direct users when they click the logo text or logo image on any web page using this Theme. Valid only for Themes using &quot;Fonteva Drive&quot; as a stylesheet template.</inlineHelpText>
        <label>Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Navbar_Background_Color__c</fullName>
        <defaultValue>&quot;#F1F1F1&quot;</defaultValue>
        <description>The background color to use for the primary navigation bar affixed to the top of community related pages.</description>
        <inlineHelpText>The background color to use for the primary navigation bar affixed to the top of community related pages.</inlineHelpText>
        <label>Navbar Background</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Navbar_Link_Color__c</fullName>
        <defaultValue>&quot;#555555&quot;</defaultValue>
        <description>The color to use for links contained inside the primary navigation bar affixed to the top of community related pages.</description>
        <inlineHelpText>The color to use for links contained inside the primary navigation bar affixed to the top of community related pages.</inlineHelpText>
        <label>Navbar Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Supernav_Background_Color__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <description>The background color to use for the supernav.</description>
        <inlineHelpText>The background color to use for the supernav.</inlineHelpText>
        <label>Supernav Background</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Supernav_HTML_Position_1__c</fullName>
        <description>The Text/HTML for the Supernav Position #1.</description>
        <inlineHelpText>The Text/HTML for the Supernav Position #1.</inlineHelpText>
        <label>Supernav HTML Position 1</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Supernav_HTML_Position_2__c</fullName>
        <description>The Text/HTML for the Supernav Position #2.</description>
        <inlineHelpText>The Text/HTML for the Supernav Position #2.</inlineHelpText>
        <label>Supernav HTML Position 2</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Supernav_HTML_Position_3__c</fullName>
        <description>The Text/HTML for the Supernav Position #3.</description>
        <inlineHelpText>The Text/HTML for the Supernav Position #3.</inlineHelpText>
        <label>Supernav HTML Position 3</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Supernav_Link_Color__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <description>The color to use for links contained inside the supernav.</description>
        <inlineHelpText>The color to use for links contained inside the supernav.</inlineHelpText>
        <label>Supernav Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Supernav_Text_Color__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <description>The color to use for text contained inside the supernav.</description>
        <inlineHelpText>The color to use for text contained inside the supernav.</inlineHelpText>
        <label>Supernav Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Text_Color__c</fullName>
        <description>Valid hexadecimal, rgb, or rgba notation required.</description>
        <inlineHelpText>Valid hexadecimal, rgb, or rgba notation required.</inlineHelpText>
        <label>Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Theme</label>
    <listViews>
        <fullName>PagesApi__All</fullName>
        <columns>NAME</columns>
        <columns>PagesApi__Body_Background_Color__c</columns>
        <columns>PagesApi__Brand_Primary__c</columns>
        <columns>PagesApi__Brand_Secondary__c</columns>
        <columns>PagesApi__Link_Color__c</columns>
        <columns>PagesApi__Text_Color__c</columns>
        <columns>PagesApi__Logo_Image__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>